Android: Wii Overlay Controller Overhaul

--- a/Source/Android/app/src/main/assets/WiimoteNew.ini
+++ b/Source/Android/app/src/main/assets/WiimoteNew.ini
@@ -37,6 +37,7 @@ Shake/X = `Button 132`
 Shake/Y = `Button 133`
 Shake/Z = `Button 134`
 Extension = Nunchuk
+Options/Sideways Wiimote = False
 Nunchuk/Buttons/C = `Button 200`
 Nunchuk/Buttons/Z = `Button 201`
 Nunchuk/Stick/Up = `Axis 203`
@@ -182,6 +183,7 @@ Shake/X = `Button 132`
 Shake/Y = `Button 133`
 Shake/Z = `Button 134`
 Extension = None
+Options/Sideways Wiimote = False
 Nunchuk/Buttons/C = `Button 200`
 Nunchuk/Buttons/Z = `Button 201`
 Nunchuk/Stick/Up = `Axis 203`
@@ -327,6 +329,7 @@ Shake/X = `Button 132`
 Shake/Y = `Button 133`
 Shake/Z = `Button 134`
 Extension = None
+Options/Sideways Wiimote = False
 Nunchuk/Buttons/C = `Button 200`
 Nunchuk/Buttons/Z = `Button 201`
 Nunchuk/Stick/Up = `Axis 203`
@@ -472,6 +475,7 @@ Shake/X = `Button 132`
 Shake/Y = `Button 133`
 Shake/Z = `Button 134`
 Extension = None
+Options/Sideways Wiimote = False
 Nunchuk/Buttons/C = `Button 200`
 Nunchuk/Buttons/Z = `Button 201`
 Nunchuk/Stick/Up = `Axis 203`
