--- a/Source/Android/app/src/main/assets/WiimoteProfile.ini
+++ b/Source/Android/app/src/main/assets/WiimoteProfile.ini
@@ -37,6 +37,7 @@ Shake/X = `Button 132`
 Shake/Y = `Button 133`
 Shake/Z = `Button 134`
 Extension = Nunchuk
+Options/Sideways Wiimote = False
 Nunchuk/Buttons/C = `Button 200`
 Nunchuk/Buttons/Z = `Button 201`
 Nunchuk/Stick/Up = `Axis 203`
