--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/Entitlements_JB.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/Entitlements_JB.plist
@@ -15,6 +15,7 @@
 		<string>/private/var/mobile/Documents/DolphiniOS/</string>
 		<string>/Library/LaunchDaemons/</string>
 		<string>/usr/lib/</string>
+		<string>/var/run/</string>
 	</array>
 	<key>seatbelt-profiles</key>
 	<array>
