iOS: Update touch Wiimote profiles to add IR recenter button

--- a/Source/Android/app/src/main/assets/WiimoteProfile.ini
+++ b/Source/Android/app/src/main/assets/WiimoteProfile.ini
@@ -141,4 +141,5 @@ IMUGyroscope/Roll Left = `Axis 633`
 IMUGyroscope/Roll Right = `Axis 634`
 IMUGyroscope/Yaw Left = `Axis 635`
 IMUGyroscope/Yaw Right = `Axis 636`
+IMUIR/Recenter = `Button 800`
 Rumble/Motor = `Rumble 700`
