--- a/Source/Android/app/src/main/assets/WiimoteNew.ini
+++ b/Source/Android/app/src/main/assets/WiimoteNew.ini
@@ -141,6 +141,7 @@ IMUGyroscope/Roll Left = `Axis 633`
 IMUGyroscope/Roll Right = `Axis 634`
 IMUGyroscope/Yaw Left = `Axis 635`
 IMUGyroscope/Yaw Right = `Axis 636`
+IMUIR/Recenter = `Button 800`
 Source = 1
 Rumble/Motor = `Rumble 700`
 [Wiimote2]
@@ -286,6 +287,7 @@ IMUGyroscope/Roll Left = `Axis 633`
 IMUGyroscope/Roll Right = `Axis 634`
 IMUGyroscope/Yaw Left = `Axis 635`
 IMUGyroscope/Yaw Right = `Axis 636`
+IMUIR/Recenter = `Button 800`
 Source = 0
 Rumble/Motor = `Rumble 700`
 [Wiimote3]
@@ -431,6 +433,7 @@ IMUGyroscope/Roll Left = `Axis 633`
 IMUGyroscope/Roll Right = `Axis 634`
 IMUGyroscope/Yaw Left = `Axis 635`
 IMUGyroscope/Yaw Right = `Axis 636`
+IMUIR/Recenter = `Button 800`
 Source = 0
 Rumble/Motor = `Rumble 700`
 [Wiimote4]
@@ -576,5 +579,6 @@ IMUGyroscope/Roll Left = `Axis 633`
 IMUGyroscope/Roll Right = `Axis 634`
 IMUGyroscope/Yaw Left = `Axis 635`
 IMUGyroscope/Yaw Right = `Axis 636`
+IMUIR/Recenter = `Button 800`
 Source = 0
 Rumble/Motor = `Rumble 700`
