iOS: Add Rumble to the default physical controller profiles

--- a/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiGCPadProfile.ini
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiGCPadProfile.ini
@@ -25,3 +25,4 @@ Triggers/R =
 Triggers/L-Analog = `L Trigger`
 Triggers/R-Analog = `R Trigger`
 Triggers/Threshold = 90,000000
+Rumble/Motor = `Rumble`
