--- a/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiWiimoteProfile.ini
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiWiimoteProfile.ini
@@ -35,3 +35,4 @@ IMUGyroscope/Roll Right = `Gyro Roll Right`
 IMUGyroscope/Yaw Left = `Gyro Yaw Left`
 IMUGyroscope/Yaw Right = `Gyro Yaw Right`
 IMUIR/Enabled = True
+Rumble/Motor = `Rumble`
