iOS: Update existing MFi controller configs for Rumble

--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -43,5 +43,7 @@
 	<false/>
 	<key>tscontroller_config_version</key>
 	<integer>0</integer>
+	<key>mfi_config_version</key>
+	<integer>0</integer>
 </dict>
 </plist>
