iOS: Add toggle for 3D Touch analog buttons

--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -45,5 +45,7 @@
 	<integer>0</integer>
 	<key>mfi_config_version</key>
 	<integer>0</integer>
+	<key>3d_touch_analog_triggers_enabled</key>
+	<true/>
 </dict>
 </plist>
