CMake for Python scripting

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -3,6 +3,14 @@ add_library(core
   ActionReplay.h
   Analytics.cpp
   Analytics.h
+  API/Controller.cpp
+  API/Controller.h
+  API/Events.cpp
+  API/Events.h
+  API/Memory.cpp
+  API/Memory.h
+  API/Gui.cpp
+  API/Gui.h
   ARDecrypt.cpp
   ARDecrypt.h
   BootManager.cpp
@@ -554,6 +562,7 @@ PUBLIC
   inputcommon
   ${MBEDTLS_LIBRARIES}
   pugixml
+  scripting
   sfml-network
   sfml-system
   videonull
@@ -562,6 +571,7 @@ PUBLIC
   videovulkan
 
 PRIVATE
+  imgui # TODO imgui shouldn't be here
   fmt::fmt
   ${LZO}
   ZLIB::ZLIB
