--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Thumbs.db
 Source/Core/Common/scmrev.h
 # Ignore files output by build
 /[Bb]uild*/
+/out/
 /[Bb]inary*/
 /obj/
 # Ignore files output by Android cmake build
