stop using deprecated set-env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,10 +123,10 @@ jobs:
           if: success()
           run: |
             git fetch --prune --unshallow
-            echo ::set-env name=GIT_BRANCH::$(git rev-parse --abbrev-ref HEAD)
-            echo ::set-env name=GIT_HASH::$(git rev-parse --short HEAD)
-            echo ::set-env name=GIT_TAG::$(git describe --tags --abbrev=0)
-            echo ::set-env name=CURR_DATE::$(date +%Y-%m-%d)
+            echo "GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
+            echo "GIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+            echo "GIT_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+            echo "CURR_DATE=$(date +%Y-%m-%d)" >> $GITHUB_ENV
         - name: "Install prerequisites"
           if: success()
           shell: bash
@@ -204,10 +204,10 @@ jobs:
           if: success()
           run: |
             git fetch --prune --unshallow
-            echo ::set-env name=GIT_BRANCH::$(git rev-parse --abbrev-ref HEAD)
-            echo ::set-env name=GIT_HASH::$(git rev-parse --short HEAD)
-            echo ::set-env name=GIT_TAG::$(git describe --tags --abbrev=0)
-            echo ::set-env name=CURR_DATE::$(date +%Y-%m-%d)
+            echo "GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
+            echo "GIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+            echo "GIT_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+            echo "CURR_DATE=$(date +%Y-%m-%d)" >> $GITHUB_ENV
         - name: "Install prerequisites"
           if: success()
           shell: bash
@@ -285,10 +285,10 @@ jobs:
         if: success()
         run: |
           git fetch --prune --unshallow
-          echo ::set-env name=GIT_BRANCH::$(git rev-parse --abbrev-ref HEAD)
-          echo ::set-env name=GIT_HASH::$(git rev-parse --short HEAD)
-          echo ::set-env name=GIT_TAG::$(git describe --tags --abbrev=0)
-          echo ::set-env name=CURR_DATE::$(date +%Y-%m-%d)
+          echo "GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
+          echo "GIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "GIT_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+          echo "CURR_DATE=$(date +%Y-%m-%d)" >> $GITHUB_ENV
       - name: "Install 10.14 SDK"
         if: success()
         shell: bash
@@ -351,10 +351,10 @@ jobs:
         if: success()
         run: |
           git fetch --prune --unshallow
-          echo ::set-env name=GIT_BRANCH::$(git rev-parse --abbrev-ref HEAD)
-          echo ::set-env name=GIT_HASH::$(git rev-parse --short HEAD)
-          echo ::set-env name=GIT_TAG::$(git describe --tags --abbrev=0)
-          echo ::set-env name=CURR_DATE::$(date +%Y-%m-%d)
+          echo "GIT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
+          echo "GIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "GIT_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+          echo "CURR_DATE=$(date +%Y-%m-%d)" >> $GITHUB_ENV
       - name: "Install 10.14 SDK"
         if: success()
         shell: bash
