iOS: Add non-symlinked path for /var/run to entitlement exceptions

--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/Entitlements_JB.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/Entitlements_JB.plist
@@ -13,6 +13,7 @@
 	<key>com.apple.security.exception.files.absolute-path.read-write</key>
 	<array>
 		<string>/private/var/mobile/Documents/DolphiniOS/</string>
+		<string>/private/var/run/</string>
 		<string>/Library/LaunchDaemons/</string>
 		<string>/usr/lib/</string>
 		<string>/var/run/</string>
