Debugger: Initial implementation of conditional breakpoints

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -812,6 +812,8 @@ endif()
 
 include_directories(Externals/picojson)
 
+add_subdirectory(Externals/expr)
+
 add_subdirectory(Externals/rangeset)
 
 ########################################
