Stop deleting the primehack filter, visual studio. Learn how to merge your own dang files.

--- a/Source/Core/Core/Core.vcxproj.filters
+++ b/Source/Core/Core/Core.vcxproj.filters
@@ -172,6 +172,12 @@
     <Filter Include="PowerPC\JitArm64">
       <UniqueIdentifier>{9e91e72c-e432-4e02-8e03-c45c2b6f6957}</UniqueIdentifier>
     </Filter>
+    <Filter Include="PrimeHack">
+      <UniqueIdentifier>{001725d4-19f9-49ab-bca0-bd53e268b072}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="PrimeHack\Mods">
+      <UniqueIdentifier>{cfc8f9e9-f4bf-4aed-85d0-00d4dc96563b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BootManager.cpp" />
@@ -464,9 +470,6 @@
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClCompile>
     <ClCompile Include="HW\EXI\EXI_DeviceMic.cpp">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
-    </ClCompile>
-    <ClCompile Include="HW\EXI\BBA-TAP\TAP_Win32.cpp">
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClCompile>
     <ClCompile Include="HW\Sram.cpp">
@@ -999,21 +1002,8 @@
     <ClCompile Include="PowerPC\Jit64\RegCache\FPURegCache.cpp">
       <Filter>PowerPC\Jit64</Filter>
     </ClCompile>
-    <ClCompile Include="HW\EXI\BBA\XLINK_KAI_BBA.cpp">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface\BBA</Filter>
-    </ClCompile>
-    <ClCompile Include="PrimeHack\HackConfig.cpp">
-      <Filter>PrimeHack</Filter>
-    </ClCompile>
-    <ClCompile Include="PrimeHack\HackManager.cpp">
-      <Filter>PrimeHack</Filter>
-    </ClCompile>
-    <ClCompile Include="PrimeHack\PrimeUtils.cpp">
-      <Filter>PrimeHack</Filter>
-    </ClCompile>
-    <ClCompile Include="PrimeHack\Transform.cpp">
-      <Filter>PrimeHack</Filter>
-    </ClCompile>
+    <ClCompile Include="HW\EXI\BBA\TAP_Win32.cpp" />
+    <ClCompile Include="HW\EXI\BBA\XLINK_KAI_BBA.cpp" />
     <ClCompile Include="PrimeHack\Mods\AutoEFB.cpp">
       <Filter>PrimeHack\Mods</Filter>
     </ClCompile>
@@ -1034,6 +1024,18 @@
     </ClCompile>
     <ClCompile Include="PrimeHack\Mods\ContextSensitiveControls.cpp">
       <Filter>PrimeHack\Mods</Filter>
+    </ClCompile>
+    <ClCompile Include="PrimeHack\Transform.cpp">
+      <Filter>PrimeHack</Filter>
+    </ClCompile>
+    <ClCompile Include="PrimeHack\PrimeUtils.cpp">
+      <Filter>PrimeHack</Filter>
+    </ClCompile>
+    <ClCompile Include="PrimeHack\HackConfig.cpp">
+      <Filter>PrimeHack</Filter>
+    </ClCompile>
+    <ClCompile Include="PrimeHack\HackManager.cpp">
+      <Filter>PrimeHack</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1276,9 +1278,6 @@
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClInclude>
     <ClInclude Include="HW\EXI\EXI_DeviceMic.h">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
-    </ClInclude>
-    <ClInclude Include="HW\EXI\BBA-TAP\TAP_Win32.h">
       <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface</Filter>
     </ClInclude>
     <ClInclude Include="HW\Sram.h">
@@ -1791,25 +1790,8 @@
     <ClInclude Include="PowerPC\JitArmCommon\BackPatch.h">
       <Filter>PowerPC\JitArmCommon</Filter>
     </ClInclude>
-    <ClInclude Include="HW\EXI\BBA\TAP_Win32.h">
-      <Filter>HW %28Flipper/Hollywood%29\EXI - Expansion Interface\BBA</Filter>
-    </ClInclude>
     <ClInclude Include="SyncIdentifier.h" />
-    <ClInclude Include="PrimeHack\HackConfig.h">
-      <Filter>PrimeHack</Filter>
-    </ClInclude>
-    <ClInclude Include="PrimeHack\HackManager.h">
-      <Filter>PrimeHack</Filter>
-    </ClInclude>
-    <ClInclude Include="PrimeHack\PrimeMod.h">
-      <Filter>PrimeHack</Filter>
-    </ClInclude>
-    <ClInclude Include="PrimeHack\PrimeUtils.h">
-      <Filter>PrimeHack</Filter>
-    </ClInclude>
-    <ClInclude Include="PrimeHack\Transform.h">
-      <Filter>PrimeHack</Filter>
-    </ClInclude>
+    <ClInclude Include="HW\EXI\BBA\TAP_Win32.h" />
     <ClInclude Include="PrimeHack\Mods\AutoEFB.h">
       <Filter>PrimeHack\Mods</Filter>
     </ClInclude>
@@ -1828,10 +1810,10 @@
     <ClInclude Include="PrimeHack\Mods\Noclip.h">
       <Filter>PrimeHack\Mods</Filter>
     </ClInclude>
-    <ClInclude Include="PrimeHack\Mods\SkipCutscene.h">
+    <ClInclude Include="PrimeHack\Mods\SpringballButton.h">
       <Filter>PrimeHack\Mods</Filter>
     </ClInclude>
-    <ClInclude Include="PrimeHack\Mods\SpringballButton.h">
+    <ClInclude Include="PrimeHack\Mods\SkipCutscene.h">
       <Filter>PrimeHack\Mods</Filter>
     </ClInclude>
     <ClInclude Include="PrimeHack\Mods\ViewModifier.h">
@@ -1839,6 +1821,21 @@
     </ClInclude>
     <ClInclude Include="PrimeHack\Mods\ContextSensitiveControls.h">
       <Filter>PrimeHack\Mods</Filter>
+    </ClInclude>
+    <ClInclude Include="PrimeHack\Transform.h">
+      <Filter>PrimeHack</Filter>
+    </ClInclude>
+    <ClInclude Include="PrimeHack\PrimeUtils.h">
+      <Filter>PrimeHack</Filter>
+    </ClInclude>
+    <ClInclude Include="PrimeHack\PrimeMod.h">
+      <Filter>PrimeHack</Filter>
+    </ClInclude>
+    <ClInclude Include="PrimeHack\HackConfig.h">
+      <Filter>PrimeHack</Filter>
+    </ClInclude>
+    <ClInclude Include="PrimeHack\HackManager.h">
+      <Filter>PrimeHack</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
