--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -479,6 +479,7 @@ add_library(core
   PrimeHack/Mods/SkipCutscene.h
   PrimeHack/Mods/SpringballButton.cpp
   PrimeHack/Mods/ViewModifier.cpp
+  PrimeHack/Mods/ContextSensitiveControls.cpp
   PrimeHack/HackConfig.cpp
   PrimeHack/HackManager.cpp
   PrimeHack/Transform.cpp
