--- a/Data/Sys/GameSettings/GEZ.ini
+++ b/Data/Sys/GameSettings/GEZ.ini
@@ -1,4 +1,4 @@
-# GEZE8P, GEZP8P - BillyHatcher
+# GEZE8P, GEZP8P - Billy Hatcher and the Giant Egg
 
 [Core]
 # Values set here will override the main Dolphin settings.
@@ -13,5 +13,5 @@
 # Add action replay cheats here.
 
 [Video_Settings]
-SafeTextureCacheColorSamples = 512
-
+# Fixes game text and dark puddles in final level and boss.
+SafeTextureCacheColorSamples = 0
