--- a/Data/Sys/GameSettings/RDL.ini
+++ b/Data/Sys/GameSettings/RDL.ini
@@ -1,4 +1,6 @@
 # RDLE5G, RDLP70 - Spy Fox in Dry Cereal
 
 [Video_Settings]
+# Fixes cutscene animation.
+SafeTextureCacheColorSamples = 0
 SuggestedAspectRatio = 2
