--- a/Data/Sys/GameSettings/RSJ.ini
+++ b/Data/Sys/GameSettings/RSJ.ini
@@ -1,4 +1,6 @@
 # RSJE41, RSJP41 - Broken Sword: Shadow of the Templars (Director's Cut)
 
 [Video_Settings]
+# Fixes game text.
+SafeTextureCacheColorSamples = 0
 SuggestedAspectRatio = 2
