--- a/Data/Sys/GameSettings/RT4.ini
+++ b/Data/Sys/GameSettings/RT4.ini
@@ -12,6 +12,9 @@
 [ActionReplay]
 # Add action replay cheats here.
 
+[Video_Settings]
+# Fixes skit animations.
+SafeTextureCacheColorSamples = 512
+
 [Video_Hacks]
 EFBEmulateFormatChanges = True
-
