--- a/Data/Sys/GameSettings/RBH.ini
+++ b/Data/Sys/GameSettings/RBH.ini
@@ -13,7 +13,8 @@
 # Add action replay cheats here.
 
 [Video_Settings]
-SafeTextureCacheColorSamples = 512
+# Fixes invisible objects.
+SafeTextureCacheColorSamples = 0
 SuggestedAspectRatio = 2
 
 [Video_Hacks]
