--- a/Data/Sys/GameSettings/RGB.ini
+++ b/Data/Sys/GameSettings/RGB.ini
@@ -13,4 +13,6 @@
 # Add action replay cheats here.
 
 [Video_Settings]
+# Fixes animation.
+SafeTextureCacheColorSamples = 0
 SuggestedAspectRatio = 2
