--- a/Data/Sys/GameSettings/RNC.ini
+++ b/Data/Sys/GameSettings/RNC.ini
@@ -1,4 +1,8 @@
 # RNCEH4, RNCPH4 - SNK Arcade Classics Volume 1
 
+[Core]
+# Values set here will override the main Dolphin settings.
+CPUThread = 0
+
 [Video_Settings]
 SuggestedAspectRatio = 2
