--- a/Data/Sys/GameSettings/ROA.ini
+++ b/Data/Sys/GameSettings/ROA.ini
@@ -13,5 +13,5 @@
 # Add action replay cheats here.
 
 [Video_Settings]
-SafeTextureCacheColorSamples = 512
-
+# Fixes game text.
+SafeTextureCacheColorSamples = 0
