--- a/Data/Sys/GameSettings/SJC.ini
+++ b/Data/Sys/GameSettings/SJC.ini
@@ -1,4 +1,6 @@
 # SJCEZW - Jerry Rice & Nitus' Dog Football
 
 [Video_Settings]
+# Display menu correctly.
+SafeTextureCacheColorSamples = 0
 SuggestedAspectRatio = 2
