--- a/Data/Sys/GameSettings/SEA.ini
+++ b/Data/Sys/GameSettings/SEA.ini
@@ -18,3 +18,5 @@ SafeTextureCacheColorSamples = 512
 [Video_Enhancements]
 ForceFiltering = False
 
+[Video_Hacks]
+UseEpsilonDuringTextureLookup = True
