Changed epsilon hack toggle to slider.

--- a/Data/Sys/GameSettings/G6F.ini
+++ b/Data/Sys/GameSettings/G6F.ini
@@ -1,4 +1,4 @@
 # G6FE69, G6FD69, G6FF69, G6FP69 - FIFA World Cup: Germany 2006
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
