--- a/Data/Sys/GameSettings/GAZ.ini
+++ b/Data/Sys/GameSettings/GAZ.ini
@@ -1,4 +1,4 @@
 # GAZF69, GAZE69, GAZJ13, GAZM69, GAZI69, GAZH69, GAZD69, GAZP69, GAZJ69, GAZS69 - Harry Potter and the Prisoner of Azkaban
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
