--- a/Data/Sys/GameSettings/GF6.ini
+++ b/Data/Sys/GameSettings/GF6.ini
@@ -1,4 +1,4 @@
 # GF6P69, GF6F69, GF6E69, GF6D69, GF6H69, GF6S69, GF6I69 - FIFA Soccer 06
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
