--- a/Data/Sys/GameSettings/GFA.ini
+++ b/Data/Sys/GameSettings/GFA.ini
@@ -1,4 +1,4 @@
 # GFAP69, GFAJ13, GFAE69, GFAD69, GFAF69, GFAI69, GFAS69 - FIFA Soccer 2003
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
