--- a/Data/Sys/GameSettings/GON.ini
+++ b/Data/Sys/GameSettings/GON.ini
@@ -1,4 +1,4 @@
 # GONF69, GONP69, GONJ13, GONE69, GOND69 - Medal of Honor: European Assault
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
