--- a/Data/Sys/GameSettings/GR8.ini
+++ b/Data/Sys/GameSettings/GR8.ini
@@ -1,4 +1,4 @@
 # GR8F69, GRZJ13, GR8E69, GR8P69, GR8D69 - Medal of Honor: Rising Sun
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
