--- a/Data/Sys/GameSettings/GUG.ini
+++ b/Data/Sys/GameSettings/GUG.ini
@@ -1,4 +1,4 @@
 # GUGP69, GUGF69, GUGD69, GUGE69, G2NJ13 - Need for Speed: Underground 2
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
