--- a/Data/Sys/GameSettings/GXF.ini
+++ b/Data/Sys/GameSettings/GXF.ini
@@ -1,4 +1,4 @@
 # GXFP69, GXFF69, GXFE69, GXFD69, GXFI69, GXFS69 - FIFA Soccer 2004
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
