--- a/Data/Sys/GameSettings/R7X.ini
+++ b/Data/Sys/GameSettings/R7X.ini
@@ -17,4 +17,4 @@ SafeTextureCacheColorSamples = 512
 
 [Video_Hacks]
 EFBToTextureEnable = False
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
