--- a/Data/Sys/GameSettings/RBO.ini
+++ b/Data/Sys/GameSettings/RBO.ini
@@ -20,4 +20,4 @@ ForceFiltering = False
 
 [Video_Hacks]
 ImmediateXFBEnable = False
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
