--- a/Data/Sys/GameSettings/RD2.ini
+++ b/Data/Sys/GameSettings/RD2.ini
@@ -1,4 +1,4 @@
 # RD2X41, RD2J41, RD2P41, RD2K41, RD2E41 - Red Steel 2
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
