--- a/Data/Sys/GameSettings/RM2.ini
+++ b/Data/Sys/GameSettings/RM2.ini
@@ -1,4 +1,4 @@
 # RM2E69, RM2X69, RM2J13, RM2P69, RM2U69 - Medal of Honor: Heroes 2
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
