--- a/Data/Sys/GameSettings/RNP.ini
+++ b/Data/Sys/GameSettings/RNP.ini
@@ -1,4 +1,4 @@
 # RNPP69, RNPY69, RNPX69, RNPJ13, RNPK69, RNPE69 - Need for Speed: ProStreet
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
