--- a/Data/Sys/GameSettings/GLZ.ini
+++ b/Data/Sys/GameSettings/GLZ.ini
@@ -1,4 +1,4 @@
 # GLZP69, GLZE69, GLZD69, GLZF69 - 007: From Russia with Love (tm)
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
