--- a/Data/Sys/GameSettings/GO7.ini
+++ b/Data/Sys/GameSettings/GO7.ini
@@ -1,4 +1,4 @@
 # GO7F69, GO7D69, GO7E69, GO7S69, GO7P69 - James Bond 007(tm): NightFire(tm)
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
