--- a/Data/Sys/GameSettings/GVL.ini
+++ b/Data/Sys/GameSettings/GVL.ini
@@ -14,4 +14,4 @@ SyncOnSkipIdle = False
 # Add action replay cheats here.
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
