--- a/Data/Sys/GameSettings/SNH.ini
+++ b/Data/Sys/GameSettings/SNH.ini
@@ -1,4 +1,4 @@
 # SNHP69, SNHJ13, SNHE69 - Need for Speed: Hot Pursuit
 
 [Video_Hacks]
-UseEpsilonDuringTextureLookup = True
+TextureLookupEpsilon = 25
