--- a/Data/Sys/GameSettings/SD2.ini
+++ b/Data/Sys/GameSettings/SD2.ini
@@ -18,3 +18,6 @@ SafeTextureCacheColorSamples = 512
 [Video_Enhancements]
 MaxAnisotropy = 0
 ForceFiltering = False
+
+[Video_Hacks]
+TextureLookupEpsilon = 50
