--- a/Source/Core/Core/Core.vcxproj.filters
+++ b/Source/Core/Core/Core.vcxproj.filters
@@ -1037,6 +1037,9 @@
     <ClCompile Include="PrimeHack\HackManager.cpp">
       <Filter>PrimeHack</Filter>
     </ClCompile>
+    <ClCompile Include="PrimeHack\EmuVariableManager.cpp">
+      <Filter>PrimeHack</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BootManager.h" />
@@ -1839,6 +1842,9 @@
     </ClInclude>
     <ClInclude Include="PrimeHack\Mods\RestoreDashing.h">
       <Filter>PrimeHack\Mods</Filter>
+    </ClInclude>
+    <ClInclude Include="PrimeHack\EmuVariableManager.h">
+      <Filter>PrimeHack</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
