--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -480,6 +480,8 @@ add_library(core
   PrimeHack/Mods/SpringballButton.cpp
   PrimeHack/Mods/ViewModifier.cpp
   PrimeHack/Mods/ContextSensitiveControls.cpp
+	PrimeHack/Mods/PortalSkipMP2.cpp
+	PrimeHack/Mods/FriendVouchers.cpp
   PrimeHack/EmuVariableManager.cpp
   PrimeHack/HackConfig.cpp
   PrimeHack/HackManager.cpp
