--- a/Source/Core/Core/Core.vcxproj.filters
+++ b/Source/Core/Core/Core.vcxproj.filters
@@ -1043,6 +1043,15 @@
     <ClCompile Include="PrimeHack\Mods\PortalSkipMP2.cpp">
       <Filter>PrimeHack\Mods</Filter>
     </ClCompile>
+    <ClCompile Include="PrimeHack\AddressDB.cpp">
+      <Filter>PrimeHack</Filter>
+    </ClCompile>
+    <ClCompile Include="PrimeHack\AddressDBInit.cpp">
+      <Filter>PrimeHack</Filter>
+    </ClCompile>
+    <ClCompile Include="PrimeHack\PrimeMod.cpp">
+      <Filter>PrimeHack</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BootManager.h" />
@@ -1854,6 +1863,9 @@
     </ClInclude>
     <ClInclude Include="PrimeHack\Mods\PortalSkipMP2.h">
       <Filter>PrimeHack\Mods</Filter>
+    </ClInclude>
+    <ClInclude Include="PrimeHack\AddressDB.h">
+      <Filter>PrimeHack</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
